Upgrade dependency version, remove unneeded classes for simplified version of application