@@ -1,6 +1,5 @@
 package lt.pavilonis.cmm.school.scanlog;
 
-import com.google.common.collect.ImmutableMap;
 import lt.pavilonis.cmm.common.util.TimeUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,31 +9,29 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.Map;
 
 @Service
 public class ScanLogCleanupJob {
 
    private static final Logger LOGGER = LoggerFactory.getLogger(ScanLogCleanupJob.class.getSimpleName());
    private final int historyDaysThreshold;
-   private final NamedParameterJdbcTemplate jdbcSalto;
+   private final NamedParameterJdbcTemplate jdbc;
 
    public ScanLogCleanupJob(@Value("${scanlog.history.cleanup.days:300}") int historyDaysThreshold,
-                            NamedParameterJdbcTemplate jdbcSalto) {
+                            NamedParameterJdbcTemplate jdbc) {
       this.historyDaysThreshold = historyDaysThreshold;
-      this.jdbcSalto = jdbcSalto;
+      this.jdbc = jdbc;
    }
 
    @Scheduled(cron = "${scanlog.history.cleanup.cron:0 50 23 * * SAT}")
    public void deleteOldRecords() {
 
-      LocalDateTime opStart = LocalDateTime.now();
-      LocalDateTime threshold = opStart.minusDays(historyDaysThreshold);
+      var opStart = LocalDateTime.now();
+      var threshold = opStart.minusDays(historyDaysThreshold);
+      var sql = "DELETE FROM mm_ScanLog WHERE dateTime < :threshold";
 
-      int recordsDeleted = jdbcSalto.update(
-            "DELETE FROM mm_ScanLog WHERE dateTime < :threshold",
-            ImmutableMap.of("threshold", threshold)
-      );
-      LOGGER.info("Deleted old mm_ScanLog records [number={}, t={}]",
-            recordsDeleted, TimeUtils.duration(opStart));
+      int recordsDeleted = jdbc.update(sql, Map.of("threshold", threshold));
+      LOGGER.info("Deleted old mm_ScanLog records [number={}, t={}]", recordsDeleted, TimeUtils.duration(opStart));
    }
 }
